# 2022-code-surface-similarity-parameter-ml-loss-metric

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yaml
Tests/: test_ssp_tf.py
docs/: conf.py  index.rst  requirements.txt  ssp.keras.base_loss.rst  ssp.keras.callbacks.rst  ssp.keras.main.rst  ssp.keras.ops.fft.rst  ssp.keras.ops.helper.rst  ssp.keras.ops.rst  ssp.keras.ssp1d.rst  ssp.keras.ssp2d.rst  ssp.numpy.main.rst
src/ssp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ssp/keras/: __init__.py  base_frequency_loss.py  loss_functions.py
src/ssp/keras/callbacks/: __init__.py  callbacks.py
src/ssp/keras/ops/: __init__.py  helper.py
src/ssp/keras/ops/fft/: __init__.py  jax.py  tensorflow.py
src/ssp/numpy/: __init__.py  ssp.py
ssp/: ssp_tensorflow.py  ssp_torch.py
tests/: keras_test.py  numpy_test.py
